Fix: adiciona z-index e position relative para exibir imagens

--- a/public/style.css
+++ b/public/style.css
@@ -164,7 +164,7 @@ body {
     width: 100%;
     height: 100%;
     object-fit: cover;
-    display: none;
+    z-index: 1;
 }
 
 .btn-remove {
